--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
-    "name": "202210-w2ch2-saraflores",
+    "name": "202210-w2d2-rafael.garcia",
     "version": "1.0.0",
-    "description": "Week 2 - Challenge 2\r strictEquals function\r Escribe en un módulo propio, una función llamada strictEquals(a, b) que devuelva el mismo valor que a === b. Tu implementación no puede usar los operadores === ni !==.",
+    "description": "week 2 day 2 challenge proyect creamos el repo",
     "main": "index.js",
     "type": "module",
-    "prettier": {
-        "singleQuote": true
-    },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js",
+        "test": "jest",
         "lint": "eslint",
+        "jest": "jest --watchAll",
         "prepare": "husky install"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Liluminalia/202210-W2CH2-SARAFLORES.git"
+        "url": "git+https://github.com/RafGarLo/202210-w2d2-rafael.garcia.git"
     },
-    "author": "",
+    "keywords": [
+        "strict",
+        "equality"
+    ],
+    "author": "Rafael Garcia",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/Liluminalia/202210-W2CH2-SARAFLORES/issues"
+        "url": "https://github.com/RafGarLo/202210-w2d2-rafael.garcia/issues"
     },
-    "homepage": "https://github.com/Liluminalia/202210-W2CH2-SARAFLORES#readme",
+    "homepage": "https://github.com/RafGarLo/202210-w2d2-rafael.garcia#readme",
     "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+        "@types/jest": "^29.1.2",
         "eslint": "^8.25.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
-        "husky": "^8.0.1"
+        "husky": "^8.0.1",
+        "jest": "^29.1.2"
+    },
+    "babel": {
+        "env": {
+            "test": {
+                "plugins": [
+                    "@babel/plugin-transform-modules-commonjs"
+                ]
+            }
+        }
+    },
+    "prettier": {
+        "singleQuote": true
     }
 }
