--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,11 @@
         "es2021": true,
         "node": true
     },
-    "extends": "airbnb-base",
-    "overrides": [
-    ],
+    "extends": ["eslint:recommended", "prettier"],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
 }
