--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "test": "jest --watchAll",
+        "test": "jest --watchAll --coverage",
         "lint": "eslint",
         "prepare": "husky install"
     },
